kubernetes/apps/whisper-cpp/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: whisper-cpp
  namespace: whisper-cpp
  labels:
    app: whisper-cpp
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: whisper-cpp
